fixed div spacing

--- a/css/text.css
+++ b/css/text.css
@@ -10,6 +10,9 @@
   text-align: center; 
   color: white;
   font-family: 'Lora', serif;
+  margin: 10px;
+  margin-left: 0;
+  margin-right: 0;
 
 }
 #blurb {
